syntax = "proto3";

option csharp_namespace = "GrpcService1";

package Auth;

// The greeting service definition.
service AuthManagement {
  // Sends a greeting
  rpc SignIn_Grpc (UserRequest) returns (UserReply);
}

// The request message containing the user's name.
message UserRequest {
    string Username = 1;
    string Email = 2;
    string Password = 3;
}

// The response message containing the greetings.
message UserReply {
  string Token = 1;
}
